[workspace]
members = [
    "crdt",
    "distributed-lock",
    "eventual-queue",
    "reliable-broadcast",
    "roadsite-unit"
]

[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false

[patch.crates-io]
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", rev = "c3752e4e84efe3d31d1cf703b9c4e417902f0bf7" }